k8s-apps/k8s-app-hello/yaml/hello-world-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-hello-world-deployment
  labels:
    app: docker-hello-world
spec:
  selector:
    matchLabels:
      app: docker-hello-world
  replicas: 2
  template:
    metadata:
      labels:
        app: docker-hello-world
    spec:
      containers:
        - name: docker-hello-world
          image: scottsbaldwin/docker-hello-world:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: docker-hello-world-svc
  # annotations:
  #   oci.oraclecloud.com/load-balancer-type: "lb"
  #   service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
  #   service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10"
  #   service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "10"
spec:
  selector:
    app: docker-hello-world
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-backend
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: docker-hello-world-svc
                port:
                  number: 80
            path: /
