k8s-apps/k8s-app-hello/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-backend
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: docker-hello-world-svc
                port:
                  number: 80
            path: /
  # # This section is only required if TLS is to be enabled for the Ingress
  # tls:
  #   - hosts:
  #       - www.example.com
  #     secretName: example-tls
